2005-01-07  Not Zed  <NotZed@Ximian.com>

	* em-account-prefs.c (account_add_clicked): remove old code, setup
	transient parent and weak ref for refresh.

2005-01-06  JP Rosevear  <jpr@novell.com>

	* Makefile.am: install schemas properly

2005-01-06  Jeffrey Stedfast  <fejj@novell.com>

	* mail-folder-cache.c (mail_note_store): Handle the
	CamelOfflineStore case just like the CamelDiscoStore case.

	* mail-ops.c (prep_offline_do): Since we can't kill off
	CamelDisco* (groupwise is using it), we have to handle both
	CamelOfflineFolder and CamelDiscoFolder for now.
	(set_offline_do): Same.

2005-01-05  Not Zed  <NotZed@Ximian.com>

	* em-menu.c: (emph_targets[]): Add the widget target, missed this.

2005-01-05  Not Zed  <NotZed@Ximian.com>

	* em-menu.c (em_menu_target_new_widget): add a semi-dummy target
	for widget target.

	* mail-component.c (handleuri_got_folder): handle the "reply"
	parameter, if set.

	* em-composer-utils.c (em_utils_reply_to_message): only ref the
	source if supplied.
	(reply_to_message): only unref the source if supplied.

2004-12-28  Mengjie Yu  <meng-jie.yu@sun.com>

	* em-folder-tree.c: (em_folder_tree_new_with_model):
	add atk name for the treeview.

2004-12-22  Not Zed  <NotZed@Ximian.com>

	* em-account-editor.c (emae_needs_auth): moved to after
	emae_authtype_changed to fix warning.

2004-12-17  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_attachment_popup): 

	* message-list.c (ml_tree_drag_data_received): 

	* em-folder-view.c (emfv_popup, emfv_format_popup_event): 

	* em-folder-tree.c (tree_drag_data_received): api changes.
	(emft_popup): 

	* em-popup.c (emp_standard_menu_factory) 
	(emp_standard_menu_factory): api changes.

2004-12-21  Not Zed  <NotZed@Ximian.com>

	* em-account-editor.c (emae_needs_auth): if we're turned on, then
	record the current authtype setting on the widgets, if we're
	turned off, clear the authmech setting.
	(emae_setup_service): setup the needs auth after the authtype, and